# ROS-class

./: README.md
coplanar_points/: CMakeLists.txt  package.xml
coplanar_points/src/: coplanar_points.cpp
example_action_server/src/: example_action_client.cpp  example_action_server.cpp
example_eigen/: CMakeLists.txt  README.md  package.xml
example_eigen/src/: example_eigen.cpp  example_eigen_plane_fit.cpp
example_ros_library/: CMakeLists.txt
example_ros_library/include/example_ros_library/: plane_fitter.h  plane_fitter_no_doc.h
example_ros_library/src/: plane_fitter.cpp
example_trajectory/: CMakeLists.txt  README.md
example_trajectory/src/: example_trajectory_action_client.cpp  example_trajectory_action_server.cpp
gripper_control/: CMakeLists.txt  package.xml
gripper_control/include/gripper_control/: gripper_control.h
gripper_control/src/: gripper_control.cpp  gripper_control.h
interesting_moves/: CMakeLists.txt  lint.txt  package.xml
interesting_moves/html/: annotated.html  classes.html  classinteresting_moves-members.html  classinteresting_moves.html  dir_2e74fa46f66a5fc50fec93750967457b.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  index.html  interesting__moves_8h_source.html
interesting_moves/html/search/: all_0.js  classes_0.js  functions_0.js  functions_1.js  search.js
interesting_moves/include/interesting_moves/: interesting_moves.h
interesting_moves/latex/: annotated.tex  classinteresting_moves.tex  dir_2e74fa46f66a5fc50fec93750967457b.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  refman.tex
interesting_moves/src/: interestingMoves.cpp
minimal_nodes/src/: minimal_controller.cpp
minimal_robot_description/: minimal_robot.launch
p2_hxy153/: CMakeLists.txt  package.xml  readme.txt
p2_hxy153/src/: whisker_alarm.cpp  whisker_commander.cpp
p3_hxy153/: CMakeLists.txt  README.md  package.xml
p3_hxy153/src/: rick_client.cpp  rick_service2.cpp
p4_hxy153/: CMakeLists.txt  README.md  package.xml
p4_hxy153/action/: robotPath.action
p4_hxy153/src/: PathActionServer.cpp  action_lidar_alarm.cpp  robot_path_client.cpp
p7_hxy153/: CMakeLists.txt  package.xml
p7_hxy153/src/: steering_algorithm.h
p8_hxy153/: CMakeLists.txt  package.xml
p8_hxy153/src/: lin_steering_wrt_odom.cpp  rick_path_client.cpp  steering_algorithm.h
poseSender/: CMakeLists.txt  package.xml
poseSender/src/: poseSender.cpp
wavyArm/: CMakeLists.txt  package.xml  wavyRobot.launch  wavyRobot.urdf
wavyArm/src/: client.cpp  controller.cpp  server.cpp
wipe_table/: CMakeLists.txt  package.xml
wipe_table/src/: wipe_table.cpp
